# Business_World

./: .gitignore  CHANGELOG.md  CODEX_AUDIT.md  CODEX_AUDIT_FILLED.md  JB_Notes.txt  README.md  llm_firm_lab.tex  pyproject.toml
.obsidian/: Question_JB_data_analyst.txt  app.json  graph.json  workspace.json
John/: README.md
analysis/: BUG_REVIEW_2026_05_17.md  ECON_REVIEW_2026_05_17.md  ECON_REVIEW_PART2_2026_05_17.md  ECON_REVIEW_PART3_2026_05_17.md  PE_FAILURES.md  RUN_6_REVIEW.md  WAVE_NU_PLUS_11_BUG_FIXES.md  WAVE_NU_PLUS_11_ECON_AUDIT.md  WAVE_NU_PLUS_3_20Y_ANALYSIS.md  WAVE_NU_PLUS_4_SOLUTIONS.md  WAVE_NU_PLUS_6_RESEARCH_OVERVIEW.md  WAVE_NU_PLUS_7_BUG_SWEEP.md  WAVE_NU_PLUS_7_DIAGNOSIS.md  WAVE_NU_PLUS_7_FINAL_REVIEW.md  WAVE_NU_PLUS_8_CHANGES.md  WAVE_NU_PLUS_9_BUG_SWEEP.md  dashboard.py  extract_data.py  make_debrief.py  make_extra_plots.py  make_plots.py  nu6_research_overview.tex  repro_typeerror.py  repro_typeerror2.py
app/: config_builder.py  dashboard.py
config/: model_roster.yaml  smoke_live_2q.yaml  test_broker.yaml  test_broker_live.yaml  test_broker_modes.yaml  test_expansion.yaml  test_expansion_live.yaml  test_interlock_mock.yaml  test_scenario_biotech_mock.yaml  test_stage12_mock.yaml  test_well_capitalized_mock.yaml  validation_20f_16q.yaml  validation_20f_25q_run7short.yaml  validation_20f_80q.yaml  validation_20f_80q_run3.yaml  validation_20f_80q_run4.yaml  validation_20f_80q_run5.yaml  validation_20f_80q_run6.yaml  validation_20f_80q_run6_resume.yaml  validation_20f_80q_run7.yaml  validation_20f_80q_run8.yaml  validation_20f_resume_q41.yaml  (+13 more)
(+342 files in other folders)
